set(legacy_sources
  BinaryInputStreamSerializer.cpp
  CryptoNoteSerialization.cpp
  JsonInputStreamSerializer.cpp
  JsonInputValueSerializer.cpp
  JsonOutputStreamSerializer.cpp
  KeysStorage.cpp
  KVBinaryInputStreamSerializer.cpp
  KVBinaryOutputStreamSerializer.cpp
  MemoryInputStream.cpp
  SerializationOverloads.cpp
  StdInputStream.cpp
  StreamTools.cpp
  StringView.cpp
  )

set(legacy_headers)

set(legacy_private_headers
  BinaryInputStreamSerializer.h
  CryptoNoteSerialization.h
  IInputStream.h
  ISerializer.h
  JsonInputStreamSerializer.h
  JsonInputValueSerializer.h
  JsonOutputStreamSerializer.h
  KeysStorage.h
  KVBinaryCommon.h
  KVBinaryInputStreamSerializer.h
  KVBinaryOutputStreamSerializer.h
  MemoryInputStream.h
  SerializationOverloads.h
  SerializationTools.h
  StdInputStream.h
  StreamTools.h
  StringView.h
  )

monero_private_headers(legacy
  ${legacy_private_headers})
monero_add_library(legacy
  ${legacy_sources}
  ${legacy_headers}
  ${legacy_private_headers})
target_link_libraries(legacy
  PUBLIC

  PRIVATE
    ${EXTRA_LIBRARIES})
